<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_companysite"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/download"
        android:layout_margin="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/tv_title"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="20dp"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/ll_address">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iv_address"
                android:background="@drawable/maps"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:id="@+id/tv_address"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/ll_phone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iv_phone"
                android:background="@drawable/icon_tel"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenum"
                android:id="@+id/tv_phonenum"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:id="@+id/tv_detail"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/descipline"
             android:id="@+id/tv_feedback"
            android:layout_margin="20dp"
            android:gravity="left"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>